@@ -6,10 +6,13 @@
  * `Unprotect-String` can now decrypt with a key, password, or passphrase (i.e. it can now decrypt using symmetric encryption).
  * `Set-HostsEntry` now supports IPv6 addresses ([fixes issue](https://bitbucket.org/splatteredbits/carbon/issues/181/community-set-hostsentry-add-support-for)).
  * `Grant-Permission` now supports creating `Deny` access rules. Use the new `Type` parameter. [Fixes issue #152.](https://bitbucket.org/splatteredbits/carbon/issues/152)
- * `Set-EnvironmentVariable`: added `-Force` switch to make all variable modifications immediately visible in the current PowerShell process's `env:` drive. Restarts are no longer required.
+ * `Set-EnvironmentVariable`: 
+   * Added `-Force` switch to make all variable modifications immediately visible in the current PowerShell process's `env:` drive. Restarts are no longer required.
+   * You can now set an environment variable for other users. Use the `Credential` parameter to specify the user's credentials. [Fixes issue #151.](https://bitbucket.org/splatteredbits/carbon/issues/151)
  * `Remove-EnvironmentVariable`: 
    * Added `-Force` switch to make all variable removals immediately visible in the current PowerShell process's `env:` drive. Restarts are no longer required.
    * You can now remove variables from multiple targets/scopes at once.
+   * You can now remove an environment variable for other users. Use the `Credential` parameter to specify the user's credentials.
  * `Invoke-PowerShell`: you can now run PowerShell scripts as another use by passing the user's credentials to the new `Credential` parameter.
 
 ## Bug Fixes
